[tool.poetry]
name = "langgraph_agentic_rag"
version = "0.1.0"
description = "A template for an Agentic RAG LangGraph app deployable on IBM Cloud as an ai_service. This particular example focuses on a WatsonX chatbot enhanced with watsonx Utility Agent Tool 'RAGQuery'."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_agentic_rag", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-ibm = "^0.3.9"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
langgraph = ">0.2,<0.3"
langchain = "^0.3.21"
pytest = "^8.3.3"
langchain-community = "0.3.16"
psycopg2-binary = "2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
